# FP

./: README.md
hw1-olegggatttor/fp-homework/: stack.yaml
hw1-olegggatttor/fp-homework/hw1/: hw1.cabal
hw1-olegggatttor/fp-homework/hw1/src/FirstBlock/: Task1.hs  Task2.hs  Task3.hs
hw1-olegggatttor/fp-homework/hw1/src/SecondBlock/: Task2.hs
hw1-olegggatttor/fp-homework/hw1/src/ThirdBlock/: Task1.hs  Task2.hs
hw1-olegggatttor/fp-homework/hw1/test/: Spec.hs
hw1-olegggatttor/fp-homework/hw1/test/FirstBlockSpec/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
hw1-olegggatttor/fp-homework/hw1/test/SecondBlockSpec/: Task1Spec.hs  Task2Spec.hs
hw1-olegggatttor/fp-homework/hw1/test/ThirdBlockSpec/: Task1Spec.hs  Task2Spec.hs
hw1-olegggatttor/fp-homework/hw2/: hw2.cabal
hw1-olegggatttor/fp-homework/hw2/src/: Arithmetics.hs  BaseCombinators.hs  CopyPaste.hs  NonEmptyInstances.hs  NotSimpleParser.hs  SimpleMovingAverage.hs  SimpleParsers.hs  StringSum.hs  TreeInstances.hs
hw1-olegggatttor/fp-homework/hw2/test/: ArithmeticsSpec.hs  CopyPasteSpec.hs  Spec.hs  StringSumSpec.hs  TreeInstancesSpec.hs
hw2-olegggatttor/hw2/: hw2.cabal
hw2-olegggatttor/hw2/src/: Arithmetics.hs  BaseCombinators.hs  ContBonus.hs  CopyPaste.hs  NonEmptyInstances.hs  NotSimpleParser.hs  SimpleMovingAverage.hs  SimpleParsers.hs  StringSum.hs  TreeInstances.hs
hw2-olegggatttor/hw2/test/: ArithmeticsSpec.hs  BaseCombinatorsSpec.hs  CopyPasteSpec.hs  NotSimpleParserSpec.hs  SimpleParsersSpec.hs  Spec.hs  StringSumSpec.hs
hw3-olegggatttor/hw3/: hw3.cabal  stack.yaml
hw3-olegggatttor/hw3/app/: Main.hs
hw3-olegggatttor/hw3/src/: CommandLineInterface.hs  CommandLineParser.hs  Commands.hs  CommandsIO.hs  FSException.hs  FileSystem.hs  ToyFS.hs
hw3-olegggatttor/hw3/test/: FileSystemSpec.hs  Spec.hs  TestResults.hs
hw4-olegggatttor/hw4-haskell/hw4/: hw4.cabal
hw4-olegggatttor/hw4-haskell/hw4/bench/: Main.hs
hw4-olegggatttor/hw4-haskell/hw4/src/: Comonad19.hs  FileSystemLenses.hs  Geometry.hs  HalyavaScript.hs  HalyavaToJS.hs  HashTable.hs  Integrate.hs  NaiveGeometry.hs
hw4-olegggatttor/hw4-haskell/hw4/test/: Spec.hs
