name:                  hw1
version:               0.1.0.0
synopsis:              Synopsis for task 1
description:           Task 1 for FP ITMO course

homepage:              https://github.com//fp-homework/tree/master/hw1#readme
license:               MIT
license-file:          LICENSE
author:                olegggatttor
maintainer:            olegggatttor@gmail.com
copyright:             2020 Bobrov Oleg

category:              Web
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10
tested-with:           GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     FirstBlock.Task1, FirstBlock.Task2, FirstBlock.Task3, SecondBlock.Task2,
                       ThirdBlock.Task1, ThirdBlock.Task2
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       FirstBlockSpec.Task1Spec, FirstBlockSpec.Task2Spec, FirstBlockSpec.Task3Spec,
                       SecondBlockSpec.Task1Spec, SecondBlockSpec.Task2Spec, ThirdBlockSpec.Task1Spec,
                       ThirdBlockSpec.Task2Spec
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       hw1, base >=4.7 && <5, hspec
  default-language:    Haskell2010
