name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     StringSum, TreeInstances, NonEmptyInstances, Arithmetics, SimpleMovingAverage,
                       CopyPaste, BaseCombinators, SimpleParsers, NotSimpleParser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, mtl
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       StringSumSpec, ArithmeticsSpec, CopyPasteSpec
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       hw2, base >=4.7 && <5, hspec
  default-language:    Haskell2010
